--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "simplefolio",
   "version": "1.0.1",
+  "private": "true",
   "description": "A clean, beautiful and responsive portfolio template for Developers!",
-  "main": "index.js",
+  "source": "src/template.html",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js --open",
+    "start": "parcel",
+    "build:parcel": "parcel build",
+    "dev": "webpack-dev-server --config webpack.dev.js --open",
     "build": "webpack --config webpack.prod.js"
   },
   "repository": {
@@ -19,24 +22,28 @@
   },
   "homepage": "https://github.com/cobidev/simplefolio#readme",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.2.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "parcel": "^2.0.1",
+    "prettier": "^2.4.1",
+    "sass-loader": "^10.4.1",
+    "style-loader": "^2.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "bootstrap": "^4.5.0",
-    "jquery": "^3.5.1",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
+    "node-sass": "^8.0.0",
     "popper.js": "^1.16.1",
     "tilt.js": "^1.2.1"
   }
